<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
         android:title="@string/prefs_authentication">
        
        <EditTextPreference
            android:key="PREF_LOGIN"
            android:title="@string/prefs_login_title"
            android:summary="@string/prefs_login_desc"
            android:defaultValue=""
            />
        <EditTextPreference
            android:key="PREF_PASSWORD"
            android:title="@string/prefs_password_title"
            android:summary="@string/prefs_password_desc"
            android:password="true"
            android:defaultValue=""
            />
    </PreferenceCategory>
    
    <PreferenceCategory
         android:title="@string/prefs_interface">
        
        <CheckBoxPreference
            android:key="PREF_SWITCH_SCREEN_DIRECTION"
            android:title="@string/prefs_switch_screen_title"
            android:summary="@string/prefs_switch_screen_desc"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    
    <PreferenceCategory
         android:title="@string/prefs_auto_update">
        
        <CheckBoxPreference
            android:key="PREF_AUTO_UPDATE"
            android:title="@string/prefs_auto_update_title"
            android:summary="@string/prefs_auto_update_desc"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="PREF_UPDATE_FREQ"
            android:title="@string/prefs_update_freq_title"
            android:summary="@string/prefs_update_freq_desc"
            android:entries="@array/update_freq_options"
            android:entryValues="@array/update_freq_values"
            android:dialogTitle="Refresh frequency"
            android:defaultValue="900"
            />
    </PreferenceCategory>
    
    <PreferenceCategory
         android:title="@string/prefs_notification">

      <CheckBoxPreference
          android:key="PREF_NOTIFICATION_SOUND"
          android:title="@string/prefs_sound_title"
          android:summary="@string/prefs_sound_desc"
          android:defaultValue="true"
            />
      <CheckBoxPreference
          android:key="PREF_NOTIFICATION_VIBRATE"
          android:title="@string/prefs_vibrate_title"
          android:summary="@string/prefs_vibrate_desc"
          android:defaultValue="true"
            />
      <CheckBoxPreference
          android:key="PREF_NOTIFICATION_LIGHT"
          android:title="@string/prefs_light_title"
          android:summary="@string/prefs_light_desc"
          android:defaultValue="true"
            />
    </PreferenceCategory>
    
</PreferenceScreen>
